<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="Param" Id="{ccb9fd62-55b3-4cfe-888a-93eccd52e1bc}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	nMaxDebugArraySize		: UDINT := 10;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>