<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_DebugInfo" Id="{791ddf29-aff3-4a60-bad3-2e50db39d75a}">
    <Declaration><![CDATA[TYPE INTERNAL ST_DebugInfo :
STRUCT
	iDebug		: I_Debug;
	sInfo		: Strings.Str;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>