<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="DebugMsg" Id="{0a424005-923a-4d18-8297-c8f51dc8ed77}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION DebugMsg
VAR_INPUT
	iDebug			: I_Debug;
	sInfo			: Strings.Str;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF _Debug.nDebugLen = Param.nMaxDebugArraySize THEN
	RETURN;	
ELSIF _Debug.nDebugLen = Param.nMaxDebugArraySize - 1 THEN
	_Debug.stDebug[_Debug.nDebugLen].iDebug := 0;
	_Debug.stDebug[_Debug.nDebugLen].sInfo := 'Debug overflow!';
	RETURN;
END_IF

_Debug.stDebug[_Debug.nDebugLen].iDebug := iDebug;
_Debug.stDebug[_Debug.nDebugLen].sInfo := sInfo;
_Debug.nDebugLen := _Debug.nDebugLen + 1;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>